# gutenberg-parser-rs

./: .gitignore  Cargo.toml  README.md  README.tpl  aliases.js  build.rs  build.sh  cbindgen.toml  index.html  index.js  justfile  search-index.js  test.sh  webpack.config.js
.cargo/: config
benches/: benchmark.rs
bindings/asmjs/: README.md  gutenberg_post_parser.js  gutenberg_post_parser.mjs  index.html  index.js
bindings/asmjs/web/: gutenberg_post_parser.asm.js  gutenberg_post_parser.asm.mjs  index.html  index.mjs  server.php
bindings/c/: Cargo.toml  build.rs  cbindgen.toml  gutenberg_post_parser.c
bindings/c/src/: lib.rs
bindings/c/tests/: integration.rs
bindings/java/: Cargo.toml
bindings/java/java-src/com/wordpress/gutenberg/parser/: Main.java  Node.java  NodeSet.java  Parser.java
bindings/java/src/: lib.rs
bindings/java/src/com/wordpress/gutenberg/parser/: Main.java  NodeSet.java  Parser.java  RawNode.java
bindings/nodejs/: README.md
bindings/nodejs/lib/: gutenberg-test-parser-with-wasm.js  gutenberg-test-parser.js  index.js
bindings/nodejs/native/: Cargo.toml  build.rs
bindings/nodejs/native/src/: lib.rs
bindings/php/: Cargo.toml  README.md  gutenberg-post-parser  gutenberg_post_parser.h  gutenberg_post_parser.rs  index.php
bindings/php/benches/: benchmark.php  composer.json  phpbench.json
bindings/php/extension/gutenberg_post_parser/: CREDITS  config.m4  config.w32  gutenberg_post_parser.c  gutenberg_post_parser.h  php_gutenberg_post_parser.h
bindings/php/pure/: Grammar.pp  Parser.php  ParserPCRE.php  composer.json
bindings/php/tests/: integration.rs
bindings/php/tests/web-api/: server.php
bindings/wasm/: Cargo.toml  README.md  gutenberg_post_parser.js  index.html  index.js  package.json  parser_definitions.js
bindings/wasm/benches/: index.mjs  package.json
bindings/wasm/bin2/: gutenberg_post_parser.wasm
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: integration.rs
bindings/wasm/tests/web-api/: index.mjs
bindings/wasm/web/: gutenberg_post_parser.mjs  gutenberg_post_parser.wasm  gutenberg_post_parser.wasm.br  index.mjs  server.php
cargo/no_std/: Cargo.toml
cargo/std/: Cargo.toml
fuzz/: Cargo.toml
fuzz/inputs/: block
fuzz/src/: main.rs
gutenberg_post_parser/: Input.t.html  InputElement.t.html  all.html  fn.root.html  index.html  macro.fold_into_vector_many0.html  macro.take_till_terminated.html  macro.take_until_terminated.html  macro.take_until_terminated_and_consume!.html  macro.take_until_terminated_and_consume.html  sidebar-items.js  take_till_terminated.m.html  take_until_terminated.m.html  type.Input.html  type.InputElement.html
gutenberg_post_parser/ast/: enum.Node.html  index.html  sidebar-items.js  struct.Block.html
gutenberg_post_parser/combinators/: fn.fold_into_vector.html  index.html  sidebar-items.js
gutenberg_post_parser/parser/: block.v.html  block_attributes.v.html  block_list.v.html  block_name.v.html  block_name_part.v.html  core_block_name.v.html  fn.block.html  fn.block_attributes.html  fn.block_list.html  fn.block_name.html  fn.block_name_part.html  fn.core_block_name.html  fn.namespaced_block_name.html  fn.phrase.html  fn.whitespaces.html  index.html  namespaced_block_name.v.html  phrase.v.html  sidebar-items.js  whitespaces.v.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/std/error/: trait.Error.js
memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr3.html  fn.memrchr.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
nom/: all.html  enum.CompareResult.html  enum.Endianness.html  enum.Err.html  enum.ErrorKind.html  enum.Needed.html  fn.alpha.html  fn.alpha0.html  fn.alpha1.html  fn.alphanumeric.html  fn.alphanumeric0.html  fn.alphanumeric1.html  fn.anychar.html  fn.be_f32.html  fn.be_f64.html  fn.be_i16.html  fn.be_i24.html  fn.be_i32.html  fn.be_i64.html  fn.be_i8.html  fn.be_u16.html  fn.be_u24.html  fn.be_u32.html  fn.be_u64.html  fn.be_u8.html  fn.begin.html  fn.code_from_offset.html  fn.crlf.html  fn.digit.html  fn.digit0.html  fn.digit1.html  fn.double.html  fn.double_s.html  fn.eol.html  fn.error_to_u32.html  fn.float.html  fn.float_s.html  fn.hex_digit.html  fn.hex_digit0.html  fn.hex_digit1.html  (+180 more)
nom/bits/: index.html
nom/lib/: index.html  sidebar-items.js
nom/lib/std/: index.html  sidebar-items.js
nom/methods/: index.html
nom/simple_errors/: enum.Context.html  index.html
nom/types/: index.html  struct.CompleteByteSlice.html  struct.CompleteStr.html  struct.Input.html
nom/whitespace/: fn.sp.html  index.html
src/: ast.rs  c.rs  combinators.rs  java.rs  lib.rs  main.rs  nodejs.rs  parser.rs  wasm.rs
src/gutenberg_post_parser/: ast.rs.html  combinators.rs.html  lib.rs.html  parser.rs.html
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/libc/unix/: mod.rs.html
src/memchr/: lib.rs.html
src/nom/: bits.rs.html  branch.rs.html  bytes.rs.html  character.rs.html  internal.rs.html  lib.rs.html  macros.rs.html  methods.rs.html  multi.rs.html  nom.rs.html  sequence.rs.html  simple_errors.rs.html  str.rs.html  traits.rs.html  types.rs.html  util.rs.html  whitespace.rs.html
tests/: integration.rs
tests/fixtures/: autoclosing-block.html  autoclosing-block.json  autoclosing-block.output  early-adopting-the-future.html  early-adopting-the-future.json  early-adopting-the-future.output  gutenberg-demo.json  gutenberg-demo.output  moby-dick-parsed.html  moby-dick-parsed.json  pygmalian-raw-html.html  pygmalian-raw-html.json  pygmalian-raw-html.output  redesigning-chrome-desktop.html  redesigning-chrome-desktop.json  redesigning-chrome-desktop.output  shortcode-shortcomings.html  shortcode-shortcomings.json  shortcode-shortcomings.output  web-at-maximum-fps.html  web-at-maximum-fps.json  web-at-maximum-fps.output
tests/web-api/: Cargo.toml
tests/web-api/src/: main.rs
(+363 files in other folders)
