[package]
name = "gutenberg_post_parser"
version = "0.5.1"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/Hywan/gutenberg-parser-rs"
build = "build.rs"

[[bin]]
name = "gutenberg-post-parser"
path = "src/main.rs"

[lib]
name = "gutenberg_post_parser"
crate-type = ["lib", "cdylib", "dylib"]
path = "src/lib.rs"

[profile.release]
debug = false
lto = true
opt-level = 3

[features]
default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just` to compile correctly.
wasm = ["wee_alloc"]
nodejs = ["neon", "neon-build", "serde_json", "neon-serde"]

[dependencies]
nom = { version = "4.0.0-beta3", default-features = false, features = ["alloc"] }
wee_alloc = { version = "0.4.0", optional = true }
neon = { version = "0.1.22", optional = true }
serde_json = { version = "1.0", optional = true }
neon-serde = { version = "0.0.3", optional = true }
clap = "^2.31.2"

[build-dependencies]
neon-build = { version = "0.1.22", optional = true }