[package]
name = "gutenberg_post_parser"
version = "0.10.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/Hywan/gutenberg-parser-rs"
build = "build.rs"

[[bin]]
name = "gutenberg-post-parser"
path = "src/main.rs"
required-features = ["bin"]

[lib]
name = "gutenberg_post_parser"
crate-type = ["cdylib", "dylib", "lib", "staticlib"]
path = "src/lib.rs"

[profile.release]
debug = false
lto = true
opt-level = 3

[features]
default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just --list` to compile correctly.
bin = ["failure", "clap"]
c = ["cbindgen"]
java = []
nodejs = ["neon", "neon-build", "serde_json", "neon-serde"]
wasm = ["wee_alloc"]

[dependencies]
nom = { version = "4.0.0", default-features = false, features = ["alloc"] }
wee_alloc = { version = "0.4.1", optional = true }
neon = { version = "0.1.23", optional = true }
serde_json = { version = "1.0.21", optional = true }
neon-serde = { version = "0.0.3", optional = true }
failure = { version = "0.1.1", optional = true }
clap = { version = "^2.31.2", optional = true }

[build-dependencies]
cbindgen = { version = "0.6.0", optional = true }
neon-build = { version = "0.1.23", optional = true }
