[package]
name = "gutenberg_post_parser_java"
version = "0.14.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
license = "BSD-3-Clause"
readme = "../../README.md"
repository = "https://github.com/Hywan/gutenberg-parser-rs"

[lib]
name = "gutenberg_post_parser_java"
crate-type = ["dylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
gutenberg_post_parser = { path = "../../cargo/std/", version = "=0.14.0" }