[package]
name = "gutenberg_post_parser_wasm"
version = "0.11.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
license = "BSD-3-Clause"
readme = "../../README.md"
repository = "https://github.com/Hywan/gutenberg-parser-rs"

[lib]
name = "gutenberg_post_parser_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
gutenberg_post_parser = { path = "../../cargo/no_std/", version = "=0.11.0" }
wee_alloc = { version = "0.4.1" }