[package]
name = "gutenberg_post_parser_wasm"
version = "0.14.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
license = "BSD-3-Clause"
readme = "../../README.md"
repository = "https://github.com/Hywan/gutenberg-parser-rs"

[lib]
name = "gutenberg_post_parser_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
gutenberg_post_parser = { path = "../../cargo/no_std/", version = "=0.14.0" }
wee_alloc = "0.4.2"